# xp_welly_llm_atc

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README-LINUX.md  README.md  RELEASE.md  ROADMAP-IFR_LINUX.md  THIRD_PARTY.md
.claude/: Multi-leg-milestone.md
.claude/milestones/: M1-logging-engine.md  M2-cmake-cli-skeleton.md  M3-scenarios-batch.md  M4-interactive-repl.md  M5-bad-case-tests.md
.claude/prompts/: add-make-sanitize.md
.claude/tasks/: M01_region_scaffolding.md  M02_templates_platzrunde.md  M03_phraseology_normalizer.md  M04_ui_localization.md  M05_openai_backend_de.md  M06_local_backend_de.md  M07_intent_parser_de.md  M08_atis_de.md  M09_vrps_de.md  M10_cross_country.md  M12_linux_port_phase_0_audit_test.md  M12_linux_port_phase_1_audio_interface.md  M12_linux_port_phase_2_portaudio.md  M12_linux_port_phase_3_platform_splits.md  M12_linux_port_phase_4_linux_build.md  M12_linux_port_phase_5_keychain_libsecret.md  M12_linux_port_phase_6_clipboard.md  M12_linux_port_phase_7_ci_docs_release.md  ifr_ground_taxi_routing.md  milestone-06-plugin-integration.md  traffic-phase-1-foundation.md  traffic-phase-1-progress.md  traffic-phase-2-enroute-advisories.md  traffic-phase-3-ground-taxi.md  traffic-phase-4-landing-sequencing.md  traffic-phase-5-takeoff-sequencing.md
.github/workflows/: build.yml
build-sanitize/: Makefile  atc_repl  compile_commands.json
build-sanitize/libpiper/: Makefile
build-sanitize/llama.cpp/: Makefile  llama-config.cmake  llama-version.cmake  llama.pc
build-sanitize/tests/: Makefile
build-sanitize/whisper.cpp/: Makefile  whisper-config.cmake  whisper.pc
data/: airport_vrps.json  atc_prompt_templates.json  atc_templates.json  flight_rules.json  models_catalog.json  settings.json
docs/: HOWTO_ATC_VFR.md  README.md  milestone1.md  milestone4.md  milestone5.md  milestone6.md  milestone7.md  milestone8.md  milestone_M1.5_atis_broadcast.md  phase2-smoke-test.md  rundflug_atc_example.md  start.md  testing.md  xpwellysatc_manual_de.md  xpwellysatc_manual_en.md
docs/archiv/: milestone2.md  milestone3.md
docs/bzf/: strict_mode_test_edny.md
docs/howto/: cross_atc_script.md  cross_country_lszg_lszb.md  inbound_pattern_atc_script.md  rundflug_atc_example.md  touch_and_go_atc_example.md
docs/tasks/: milestone_M3_cross_country.md
spikes/spike_e2e/: README.md
spikes/spike_llama/: README.md
spikes/spike_piper/: README.md
spikes/spike_whisper/: README.md
src/: airport_vrps.cpp  airport_vrps.hpp  airspace_db.cpp  airspace_db.hpp  atc_session.cpp  atc_session.hpp  atc_state_machine.cpp  atc_state_machine.hpp  atc_templates.cpp  atc_ui.cpp  atc_ui.hpp  atis_generator.cpp  atis_generator.hpp  audio_player.cpp  audio_player.hpp  audio_recorder.cpp  audio_recorder.hpp  flight_phase.cpp  flight_phase.hpp  gpt_client.cpp  gpt_client.hpp  intent_parser.cpp  intent_parser.hpp  logging.cpp  main.cpp  ptt_input.cpp  ptt_input.hpp  settings.cpp  settings.hpp  tts_client.cpp  tts_client.hpp  whisper_client.cpp  whisper_client.hpp  xplane_context.cpp  xplane_context.hpp  xplane_context_runtime.cpp
src/atc/: atc_session.cpp  atc_session.hpp  atc_state_machine.cpp  atc_state_machine.hpp  atc_templates.cpp  atc_templates.hpp  atis_generator.cpp  atis_generator.hpp  bzf_compliance.cpp  bzf_compliance.hpp  de_phraseology.cpp  de_phraseology.hpp  engine.cpp  engine.hpp  flight_phase.cpp  flight_phase.hpp  intent_parser.cpp  intent_parser.hpp  intent_rules.cpp  intent_rules.hpp  phraseology_hints.cpp  readback_verifier.cpp  readback_verifier.hpp  traffic_advisor.cpp  traffic_advisor.hpp  traffic_dialog.cpp
src/audio/: audio_input_coreaudio.cpp  audio_input_pulseaudio.cpp  audio_player.cpp  audio_player.hpp  audio_recorder.cpp  audio_recorder.hpp  i_audio_input.hpp  mic_permission.mm  mic_permission_linux.cpp  ptt_input.cpp
src/backends/: downloader.cpp  downloader.hpp  i_language_model.hpp  i_speech_to_text.hpp  i_text_to_speech.hpp  llama_lm.cpp  loader.cpp  loader.hpp  manager.cpp  manager.hpp  mistral_lm.cpp  mistral_lm.hpp  mistral_stt.cpp  mistral_stt.hpp  mistral_tts.cpp  mistral_tts.hpp  openai_common.cpp  openai_common.hpp  openai_lm.cpp  openai_lm.hpp  openai_stt.cpp  openai_stt.hpp  openai_tts.cpp  openai_tts.hpp  piper_tts.cpp  piper_tts.hpp  (+4 more)
tests/: CMakeLists.txt  test_airport_vrps.cpp  test_atis_generator_de.cpp  test_audit_logging.cpp  test_bzf_compliance.cpp  test_cifp_reader.cpp  test_de_phraseology.cpp  test_ifr_departure.cpp  test_intent_parser.cpp  test_intent_parser_de.cpp  test_model_manifest.cpp  test_phraseology_hints.cpp  test_state_history.cpp  test_traffic_advisor.cpp  test_traffic_geometry.cpp  test_traffic_phase_classifier.cpp
tests/fixtures/: ifr_lflp_rwy22.json
testscripts/: bad_01_taxi_on_tower_eu.json  bad_02_ready_for_departure_on_ground_us.json  bad_03_no_position_on_initial_call.json  bad_04_inbound_while_parked.json  bad_05_runway_vacated_while_airborne.json  bad_06_profanity_escalation.json  bad_07_low_quality_transcript.json  bad_08_self_correction.json  bad_09_flight_following_on_tower_us.json  bad_10_eu_vfr_no_squawk.json  bad_11_eu_flight_following_not_available.json  bad_12_departure_cleared_auto_correct_airborne.json  bad_12b_departure_cleared_suppression_crosscountry.json  bad_13_landing_cleared_on_ground_90s.json  bad_14_pattern_entry_after_landing.json  bad_15_continue_approach_readback_us.json  bad_20_runway_hyphen_whisper.json  bad_22_takeoff_readback_take_of_whisper.json  bad_23_request_taxi_after_landing_history.json  flow_01_eu_pattern_grenchen.json  flow_02_eu_pattern_bern.json  flow_03_us_pattern_kpao.json  flow_04_eu_crosscountry_departure.json  flow_05_us_crosscountry_flight_following.json  flow_06_eu_multi_crosscountry.json  flow_07_us_multi_crosscountry.json  flow_08_us_ctaf_kwvi.json  flow_kvrb_part_time_tower_us.json  flow_lszg_definitive_eu.json  ifr_lflp_departure_sim.json  ifr_lszh_departure_eu.json  ifr_lszh_departure_sim.json  lszh_cross_country.json  lszh_ground_taxi.json  lszr_pattern.json  phase2_traffic_advisory.json  uncontrolled_ctaf.json
(+105 files in other folders)
